--- a/estilos.css
+++ b/estilos.css
@@ -93,8 +93,10 @@ footer {
     background: black;
     color: white;
     text-align: center;
-    height: 50px;
-    line-height: 50px;
+   position: fixed;
+   width: 100%;
+   bottom: 0;
+   height: 20px;
 }
 
 #motos {
