--- a/estilos.css
+++ b/estilos.css
@@ -1,6 +1,7 @@
 * {
     margin: 0px;
     padding: 0px;
+    box-sizing: border-box;
 }
 
 body {
@@ -36,8 +37,31 @@ body {
     column-gap: 15px;
     row-gap: 15px;
     width: 1000px;
+    
 }
-
+.gridd {
+    padding: 1rem;
+    min-height: 400px;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    column-gap: 15px;
+    row-gap: 15px;
+    width: 1650px;
+    margin: 40px;
+    
+}
+.griddd {
+    padding: 20px;
+    height: 160px;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    column-gap: 15px;
+    row-gap: 15px;
+    width: 620px;
+    margin: 50px;
+    
+}
+ 
 .grid_hijo {
     border: 2px solid rgb(0, 20, 0);
     position: relative;
@@ -130,6 +154,32 @@ footer {
     padding: 25px;
 }
 
+iframe {
+    padding: 5px;
+    margin: 32px;
+    width: 630px;
+}
+
+.caja1 { background-color: rgb(138, 136, 136);
+width: 400px;
+height: 220px;
+float: left;
+}
+.caja2 { background-color: rgb(184, 184, 176);
+    width: 400px;
+    height: 220px;
+    float: left;
+    margin: 5px;
+}
+.caja3 { background-color: rgb(169, 157, 143);
+    width: 400px;
+    height: 220px;
+    float: left;
+}
+.contenedor {
+   
+    padding: 30px;
+}
 
 
 @media screen and (max-width: 1023px) {
